# airedale

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  getpass.h  main.cpp  makefile  makefile.make  makefile.nmake  out.txt  vcppwd.cpp  vcppwd.hpp
include/: crypto.hpp  getpass.h  policy.hpp  util.hpp  vcppwd.hpp
include/providers/: chacha20.hpp  checksum.hpp  include.hpp  mt19937.hpp  password.hpp  sodium_init.hpp
src/: CMakeLists.txt  crypto.cpp  main.cpp  policy.cpp  util.cpp  vcppwd.cpp
src/providers/: chacha20.cpp  checksum.cpp  mt19937.cpp  password.cpp
